Fix SEO content overflow

--- a/src/app/components/templates/page-map/page-map.component.scss
+++ b/src/app/components/templates/page-map/page-map.component.scss
@@ -15,6 +15,8 @@
 	left: 0;
 	z-index: -1;
 	width: 100%;
+	max-height: 100vh;
+	overflow-y: auto;
 }
 
 /* Responsive
